# 3d-face-reconstruction

./: .gitignore  Cargo.toml  LICENSE.txt
src/: afw.rs  cnn.rs  config.rs  data_loader.rs  dataset.rs  lib.rs  main.rs  utils.rs
src/cnn/: activation.rs  cache.rs  layer.rs  optimizer.rs  utils.rs
src/cnn/layer/: activation_layer.rs  batch_norm_layer.rs  convolutional_layer.rs  dense_layer.rs  depthwise_conv_layer.rs  dropout_layer.rs  flatten_layer.rs  global_avg_pooling_layer.rs  max_polling_layer.rs  max_pooling_layer.rs  operation_layer.rs  reshape_layer.rs
src/cnn/optimizer/: adam.rs  sgd.rs  sgd_momentum.rs
