[package]
name = "face-reconstruction"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
image = "0.25.2"
matfile = "0.4.1"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
nshare = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version="1.0.210", features = ["derive"] }
serde_json = "1.0.128"
